redactable/tests/ui/sensitive_display_container_redactable_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("{value}")]
#[redactable(recursive)]
struct Event {
    value: String,
}

fn main() {}
